# apollo

./: .gitignore  CMakeLists.txt  README.md  create_db.sql  setup.sh
dependencies/libpq/include/postgresql/server/: pg_config.h
dependencies/libpq/lib/: libecpg.6.dylib  libecpg_compat.3.10.dylib  libpgtypes.3.dylib  libpq.5.dylib
dependencies/libpq/lib/pkgconfig/: libecpg.pc  libecpg_compat.pc  libpgtypes.pc  libpq.pc
dependencies/libpqxx/lib/: libpqxx-6.2.dylib
dependencies/libpqxx/lib/pkgconfig/: libpqxx.pc
src/: curl_obj.cpp  curl_obj.hpp  main.cpp
